test/patterns_bak/s0033_search_in_rotated_sorted_array/hafis/starchat/jml_syntax_checking.txt
./test/s0033_search_in_rotated_sorted_array/hafis/starchat/Solution.java:15: error: variable i is already defined in method search(int[],int)
//@ requires(\forall int i; 0 <= i < nums.length; ((\forall int i; 0 <= i < nums.length; (\forall int j; 0 <= j < nums.length && j != i; nums[j] != nums[i])) && (nums >= -104 && nums <= 104)));
                                                                ^
./test/s0033_search_in_rotated_sorted_array/hafis/starchat/Solution.java:15: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((\forall int i; 0 <= i < nums.length; (\forall int j; 0 <= j < nums.length && j != i; nums[j] != nums[i])) && (nums >= -104 && nums <= 104)));
                                                                                                                                                                       ^
  first type:  int[]
  second type: int
./test/s0033_search_in_rotated_sorted_array/hafis/starchat/Solution.java:15: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((\forall int i; 0 <= i < nums.length; (\forall int j; 0 <= j < nums.length && j != i; nums[j] != nums[i])) && (nums >= -104 && nums <= 104)));
                                                                                                                                                                                       ^
  first type:  int[]
  second type: int
3 errors
